# restaurant_reservation_api_test_task

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init_db.sh  pyproject.toml
backend/: alembic.ini  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 41a309ec9d58_initial_tables_with_constraints.py  a49a5aee0ae9_same.py  a4eee7da721e_added_reservations_and_tables.py
backend/app/: database.py  main.py
backend/app/db/: drop_data_for_testing.py  init_data_for_testing.py
backend/app/debugging(old tests)/: delete_data.sh  init_data_for_testing.py  init_data_using_post.sh
backend/app/models/: __init__.py  reservation.py  table.py
backend/app/routes/: __init__.py  reservations.py  tables.py
backend/app/schemas/: __init__.py  reservation.py  table.py
backend/tests/: conftest.py  test_db.py  test_reservations.py  test_tables.py
frontend/: index.html  nginx.conf  style.css
frontend/css/: style.css
frontend/js/: script.js
